syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Protos";

service DiscountProtoService {
	rpc GetDiscount (GetDiscountRequest) returns (CuponModel);
	rpc CreateDisocount (CreateDiscountRequest) returns (CuponModel);
	rpc UpdateDisocount (UpdateDiscountRequest) returns (CuponModel);
	rpc DeleteDisocount (DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message GetDiscountRequest {
	string productName = 1;
}

message CuponModel {
	int64 id = 1;
	string productName = 2;
	string description = 3;
	int32 amount = 4;
}

message CreateDiscountRequest {
	CuponModel cupon = 1;
}

message UpdateDiscountRequest {
	CuponModel cupon = 1;
}

message DeleteDiscountRequest {
	string productName = 1;
}

message DeleteDiscountResponse {
	bool success = 1;
}